force-app/main/default/objects/Integration_Transaction__c/Integration_Transaction__c.object-meta.xml
<CustomObject>
  <label>Integration Transaction</label>
  <pluralLabel>Integration Transactions</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Transaction Number</label>
    <displayFormat>ITX-{00000}</displayFormat>
  </nameField>
  <sharingModel>Private</sharingModel>
</CustomObject>