force-app/main/default/objects/Integration_Transaction__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName><label>Endpoint</label><type>Text</type><length>255</length>
</CustomField>