force-app/main/default/objects/Integration_Transaction__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName><label>Error Message</label><type>LongTextArea</type><visibleLines>3</visibleLines><length>10000</length>
</CustomField>