force-app/main/default/objects/Integration_Transaction__c/fields/Is_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Success__c</fullName><label>Success</label><type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>