force-app/main/default/objects/Integration_Transaction__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName><label>Method</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>GET</fullName><default>false</default></value>
        <value><fullName>POST</fullName><default>false</default></value>
        <value><fullName>PUT</fullName><default>false</default></value>
        <value><fullName>PATCH</fullName><default>false</default></value>
        <value><fullName>DELETE</fullName><default>false</default></value>
    </valueSetDefinition></valueSet>
</CustomField>