force-app/main/default/objects/Integration_Transaction__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName><label>Request Body</label><type>LongTextArea</type><visibleLines>5</visibleLines><length>32768</length>
</CustomField>