force-app/main/default/objects/Integration_Transaction__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName><label>Response Body</label><type>LongTextArea</type><visibleLines>5</visibleLines><length>32768</length>
</CustomField>