force-app/main/default/objects/Integration_Transaction__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName><label>Status Code</label><type>Number</type><precision>3</precision><scale>0</scale>
</CustomField>